# rusty-snake

./: Cargo.toml  README.md
advmath/: Cargo.toml
advmath/src/: coords.rs  direction.rs  lib.rs
engine/: Cargo.toml
engine/src/: lib.rs
game/: Cargo.toml
game/src/: interface.rs  lib.rs  matrix.rs
geomath/: Cargo.toml
geomath/src/: coords.rs  lib.rs  rotation.rs
serpent/: Cargo.toml
serpent/src/: lib.rs  matrix.rs
snake/: Cargo.toml
snake/src/: main.rs
