[workspace]
resolver = "3"
members = [
    "advmath",
    "serpent",
    "game",
    "engine",
    "snake",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["CieriA"]
license = "MIT"
repository = "https://github.com/CieriA/rusty-snake"
readme = "README.md"


[workspace.dependencies]
advmath = { path = "advmath" }
serpent = { path = "serpent" }
game = { path = "game" }
engine = { path = "engine" }
