[workspace]
resolver = "3"
members = [
    "snake",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["CieriA"]
license = "MIT"
repository = "https://github.com/CieriA/rusty-snake"
readme = "README.md"


[workspace.dependencies]
# External
rand = "0.9.1"

sdl2 = { version = "0.37.0", features = ["ttf"] }
sdl2_ttf = "0.25.1"
